@@ -1,3 +1,9 @@
+2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_segment),
+	(gst_qtdemux_activate_segment):
+	Unbreak segment activation again. Fixes #531672.
+
 2008-05-25  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* ext/flac/Makefile.am:
